--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikewatching</title>
-</head>
-<body>
-  <h1>🚴🏼‍♀️ Bikewatching</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="global.css">
+        <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+
+        <!-- Mapbox GL JS CSS -->
+        <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+
+
+        <title>PedalPlot</title>
+    </head>
+
+    <body>
+        <h1>
+            <header class="left-header">
+                🚴🏼‍♀️ PedalPlot
+            </header>
+            <header class="right-header">
+                <label>
+                    Filter by time:
+                    <input id='time-slider' type="range" min="0" max="1440" value="-1" style="width: 500px;">
+                    <em id="any-time">(any time)</em>
+                    <time id="selected-time">11:59</time>
+                </label>
+            </header>
+        </h1>  
+
+        <div id="map">
+            <svg></svg>
+        </div>
+
+
+
+
+        <!-- Mapbox GL JS JavaScript -->
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+
+        <!-- Load D3.js from CDN -->
+        <script src="https://d3js.org/d3.v7.min.js"></script>
+
+        <!-- Load your custom map initialization script -->
+        <script src="map.js"></script>
+    </body>
+
 </html>
