--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <svg></svg>
         </div>
 
+        <div class="legend">
+            <label>LEGEND:</label>
+            <div style="--departure-ratio: 1">More departures</div>
+            <div style="--departure-ratio: 0.5">Balanced</div>
+            <div style="--departure-ratio: 0">More arrivals</div>
+          </div>
+
 
 
         <!-- Mapbox GL JS JavaScript -->
